imports/ui/WelcomePage/_WelcomePage.scss
.welcome-page {
  display: flex;
  flex-direction: column;
  height: 100%;
  overflow-x: hidden;
}

#welcome-page-items-container {
  display: flex;
  flex: 1;
}

.finish-element {
  position: absolute;
  bottom: 0;
  left: 0;
  background-color: $peter-river-color;
  width: 0;
  border-radius: 50%;
  transition: width, height, transform;
  transition-duration: 0.5s;
  transition-timing-function: linear;
}

.finish-element:after {
  padding-top: 100%;
  display: block;
  content: '';
}

